--- a/clash.ini
+++ b/clash.ini
@@ -39,9 +39,9 @@ custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/genera
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📹 油管音乐`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`.*
-custom_proxy_group=📺 哔哩哔哩`select`[]DIRECT`[]🚀 节点选择`[]🚀 手动切换`.*
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择
+custom_proxy_group=📹 油管音乐`select`[]DIRECT`[]🚀 节点选择`.*
+custom_proxy_group=📺 哔哩哔哩`select`[]DIRECT`[]🚀 节点选择`.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
