--- a/clash.ini
+++ b/clash.ini
@@ -43,7 +43,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🔯 故障转移`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]♻️ 自动选择`.*`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]🔯 故障转移`[]🇭🇰 香港节点`[]🔯 新加坡转移`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]♻️ 自动选择`.*`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇭🇰 香港节点
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇺🇲 美国节点`[]DIRECT`.*
 custom_proxy_group=🔯 故障转移`fallback`(港|HK|Hong Kong|Hongkong, V2 - B Group|Hongkong, Tj - B Group)`http://www.gstatic.com/generate_204`180
