--- a/clash.ini
+++ b/clash.ini
@@ -42,8 +42,8 @@ ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
-;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🔯 故障转移`[]🇭🇰 香港节点`[]🔮 负载均衡HK`[]🔮 负载均衡`[]🔯 新加坡转移`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]♻️ 自动选择`.*`[]DIRECT
+;设置分组标志位ezee
+custom_proxy_group=🚀 节点选择`select`[]🔯 故障转移`[]🇭🇰 香港节点`[]🔮 负载均衡HK`[]🔯 新加坡转移`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]♻️ 自动选择`.*`[]DIRECT
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🔯 故障转移
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇺🇲 美国节点`[]DIRECT`.*
 
