--- a/clash.ini
+++ b/clash.ini
@@ -43,15 +43,16 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位ezee
-custom_proxy_group=🚀 节点选择`select`[]🔯 故障转移`[]🇭🇰 香港节点`[]🔮 负载均衡HK`[]🔯 新加坡转移`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]♻️ 自动选择`.*`[]DIRECT
-custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🔯 故障转移
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇺🇲 美国节点`[]DIRECT`.*
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🔮 负载均衡HK`[]🔮 🇸🇬 负载均衡Singapore`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]♻️ 自动选择`.*`[]DIRECT
+custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🔮 🇭🇰 负载均衡HK`[]🇭🇰 香港节点
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🔮 🇺🇲 负载均衡California`.*
 
-;custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔮 负载均衡HK`load-balance`(港|HK|Hong Kong|Hongkong)`*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔮 🇸🇬 负载均衡Singapore`load-balance`(Singapore)`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔮 🇭🇰 负载均衡HK`load-balance`(Hongkong)`*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔮 🇺🇲 负载均衡California`load-balance`(California)`*`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🔯 故障转移`fallback`(港|HK|Hong Kong|Hongkong, V2 - B Group|Hongkong, Tj - B Group|Hongkong, V2|Hongkong, Tj)`http://www.gstatic.com/generate_204`180
-custom_proxy_group=🔯 新加坡转移`fallback`(港|HK|Hong Kong|Singapore, SS - B Group|Singapore, Tj - B Group|Singapore, SS|Singapore, Tj)`http://www.gstatic.com/generate_204`180
+;custom_proxy_group=🔯 故障转移`fallback`(港|HK|Hong Kong|Hongkong, V2 - B Group|Hongkong, Tj - B Group|Hongkong, V2|Hongkong, Tj)`http://www.gstatic.com/generate_204`180
+;custom_proxy_group=🔯 新加坡转移`fallback`(港|HK|Hong Kong|Singapore, SS - B Group|Singapore, Tj - B Group|Singapore, SS|Singapore, Tj)`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|Hong Kong|Hongkong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]DIRECT
