--- a/clash.ini
+++ b/clash.ini
@@ -43,7 +43,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位ezee
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🔮 负载均衡HK`[]🔮 🇸🇬 负载均衡Singapore`[]🔮 🇺🇲 负载均衡California`load-balance`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]♻️ 自动选择`.*`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🔮 🇭🇰 负载均衡HK`[]🔮 🇸🇬 负载均衡Singapore`[]🔮 🇺🇲 负载均衡California`load-balance`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]♻️ 自动选择`.*`[]DIRECT
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🔮 🇭🇰 负载均衡HK`[]🇭🇰 香港节点
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🔮 🇺🇲 负载均衡California`.*
 
