--- a/clash.ini
+++ b/clash.ini
@@ -45,7 +45,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位ezee
 custom_proxy_group=🚀 节点选择`select`[]🔮 负载均衡HK`[]🔮 负载均衡SG`[]🔮 负载均衡UM`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]♻️ 自动选择`.*`[]DIRECT
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🔮 负载均衡HK`[]🇭🇰 香港节点
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🔮 负载均衡SG`[]🔮 负载均衡UM`.*
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🔮 负载均衡SG`[]🔮 负载均衡UM`.*`[]♻️ 自动选择`[]DIRECT
 
 custom_proxy_group=🔮 负载均衡HK`load-balance`(Hongkong)`*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔮 负载均衡SG`load-balance`(Singapore)`http://www.gstatic.com/generate_204`300,,50
