--- a/Clash.ini
+++ b/Clash.ini
@@ -39,7 +39,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置分组标志位ezee
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移HK`.*`[]DIRECT
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🔯 故障转移HK
-custom_proxy_group=📹 油管视频`select`[]🔯 故障转移SG[]`🔯 故障转移UM`[]🚀 节点选择`.*`[]♻️ 自动选择`[]DIRECT
+custom_proxy_group=📹 油管视频`select`[]🔯 故障转移SG`[]🔯 故障转移UM`[]🚀 节点选择`.*`[]♻️ 自动选择`[]DIRECT
 
 custom_proxy_group=🔯 故障转移HK`fallback`(Hongkong)`http://www.gstatic.com/generate_204`180
 custom_proxy_group=🔯 故障转移SG`fallback`(Singapore)`http://www.gstatic.com/generate_204`180
