--- a/Clash.ini
+++ b/Clash.ini
@@ -37,7 +37,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位ezee
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移HK`.*`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移HK`[]🔯 故障转移SG`[]🔯 故障转移UM`.*`[]DIRECT
 custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🔯 故障转移HK
 custom_proxy_group=📹 油管视频`select`[]🔯 故障转移SG`[]🔯 故障转移UM`[]🚀 节点选择`.*`[]♻️ 自动选择`[]DIRECT
 
